Correção: Criação de zona de início de handover na aplicação CarV2xInterfaceApp.java - Adição do envio beacon de veículo se estiver em zona de handover. - Correção de erros de latitude e longitude no RsuPredictor.java - Revisões de aperfeiçoamento em diversos arquivos.